--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,8 @@
   justify-content: space-between;
   background: white;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
-  border-radius: 10px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .navbar-lewagon .navbar-collapse {
