--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -12,7 +12,6 @@
     background-size: cover;
     background-position: center;
     height: 91vh;
-    border-radius: 20px;
-    margin-right: 20px;
     box-shadow: 1px 1px 10px white;
+    opacity: 0.75;
 }
