--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
-<%= render "shared/navbar" %>
-
 <div class="gym-img">
-  <div>
+<%= render "shared/navbar" %>
+  <div class="title-home">
     <h1>C.O Fight Club</h1>
     <p>Campo Orique Brasilian Jiu-Jitsu Fight Club</p>
   </div>
