--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -5,3 +5,8 @@
   margin-top: 109px;
   text-shadow: 1px 1px 1px rgb(51, 187, 233);
 }
+
+.title-home h1 {
+  font-family: "Marko one";
+  font-weight: 800;
+}
