--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,6 @@
   <div class="title-home">
     <h1>C.O Fight Club</h1>
     <p>Campo Orique Brasilian Jiu-Jitsu Fight Club</p>
+   <a class="btn btn-flat" href="#">Our Classes!</a>
   </div>
 </div>
