--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <%= image_tag('C.O FC Logo.png') %>
-    </a>
+    <%= link_to image_tag('C.O FC Logo.png', width: 40, style:"border-radius: 8px;"), root_path, class:"nav-link" %>
+    <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -10,19 +9,21 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Team</a>
+           <li>
+              <%= link_to "Team", team_path, class:"nav-link" %>
+            </li>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Schedule</a>
+            <%= link_to "Schedule", schedule_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <%= link_to "Services", services_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
+            <%= link_to "Product", product_path, class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Legacy</a>
+            <%= link_to "Legacy", legacy_path, class:"nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
