team view with carlos card

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,8 @@
   <div class="title-home">
     <h1>C.O Fight Club</h1>
     <p>Campo Orique Brasilian Jiu-Jitsu Fight Club</p>
-   <a class="btn btn-flat" href="#">Our Classes!</a>
+    <li class="btn btn-flat">
+      <%= link_to "Our Classes!", services_path, class:"nav-link" %>
+    </li>
   </div>
 </div>
