--- a/app/assets/stylesheets/components/_title.scss
+++ b/app/assets/stylesheets/components/_title.scss
@@ -2,11 +2,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 109px;
   text-shadow: 1px 1px 1px rgb(51, 187, 233);
 }
 
 .title-home h1 {
+  margin-top: 109px;
+  font-family: "Marko one";
+  font-weight: 800;
+}
+
+.title-rest {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-shadow: 1px 1px 1px rgb(51, 187, 233);
+  margin-top: 30px;
   font-family: "Marko one";
   font-weight: 800;
 }
