--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,6 +1,16 @@
 <div class="gym-img">
   <%= render "shared/navbar" %>
-  <div class="title-home">
-    <h1>Team</h1>
+  <div class="title-rest">
+    <h1>Our Professional Team</h1>
+  </div>
+
+  <div class="card-container">
+    <div class="card-avatar">
+      <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+    </div>
+    <div class="card-product-infos text-align-center">
+      <h2>Carlos</h2>
+      <p><strong>Faixa Preta, 66 y/o.</strong></p>
+    </div>
   </div>
 </div>
