team view done with correct cards

--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -6,11 +6,31 @@
 
   <div class="card-container">
     <div class="card-avatar">
-      <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+      <div>
+        <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+      </div>
+      <div>
+        <h2>Carlos</h2>
+        <p><strong>Faixa Preta, 66 y/o.</strong></p>
+      </div>
     </div>
-    <div class="card-product-infos text-align-center">
-      <h2>Carlos</h2>
-      <p><strong>Faixa Preta, 66 y/o.</strong></p>
+    <div class="card-avatar">
+      <div>
+        <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+      </div>
+      <div>
+        <h2>Carlos</h2>
+        <p><strong>Faixa Preta, 66 y/o.</strong></p>
+      </div>
+    </div>
+    <div class="card-avatar">
+      <div>
+        <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+      </div>
+      <div>
+        <h2>Carlos</h2>
+        <p><strong>Faixa Preta, 66 y/o.</strong></p>
+      </div>
     </div>
   </div>
 </div>
