--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,16 +1,21 @@
 .card-container {
   display: flex;
-  flex-direction: column;
-  background-color: white;
-  width: fit-content;
+  background-color: rgba(252, 252, 252, 0.4);
   border-radius: 10px;
+  justify-content: space-around;
+  height: 40vw;
+  align-items: center;
+  margin: 20px;
 }
 
 .card-avatar {
   display: flex;
   flex-direction: column;
-  height: 120px;
   align-items: center;
+  background-color: aqua;
+  width: fit-content;
+  border-radius: 10px;
+  height: 30vw;
 }
 
 .card-avatar img {
@@ -18,14 +23,14 @@
   width: 120px;
   object-fit: cover;
   border-radius: 50%;
-  margin-top: 6px;
-  margin-bottom: 6px;
+  margin: 10px;
 }
 
 .card-avatar h2 {
   font-size: 16px;
   font-weight: bold;
-  margin: 0;
+  margin-top: 16px;
+  text-align: center;
 }
 
 .card-avatar p {
@@ -34,6 +39,7 @@
   opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
+  text-align: center;
 }
 
 .card-avatar .card-avatar-infos {
