--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,47 +1,6 @@
-.card-container {
-  display: flex;
+.container {
   background-color: rgba(252, 252, 252, 0.4);
-  border-radius: 10px;
-  justify-content: space-around;
-  height: 40vw;
-  align-items: center;
-  margin: 20px;
-}
-
-.card-avatar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: aqua;
-  width: fit-content;
   border-radius: 10px;
   height: 30vw;
 }
 
-.card-avatar img {
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin: 10px;
-}
-
-.card-avatar h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin-top: 16px;
-  text-align: center;
-}
-
-.card-avatar p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
-  text-align: center;
-}
-
-.card-avatar .card-avatar-infos {
-  padding: 16px;
-}
