--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -4,30 +4,20 @@
     <h1>Our Professional Team</h1>
   </div>
 
-  <div class="card-container">
-    <div class="card-avatar">
-      <div>
-        <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
-      </div>
-      <div>
+  <div class="container">
+    <div class="row align-items-center justify-content-center">
+      <div class="col-sm">
+        <img class="rounded-circle" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
         <h2>Carlos</h2>
         <p><strong>Faixa Preta, 66 y/o.</strong></p>
       </div>
-    </div>
-    <div class="card-avatar">
-      <div>
-        <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
-      </div>
-      <div>
+      <div class="col-sm">
+        <img class="rounded-circle" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
         <h2>Carlos</h2>
         <p><strong>Faixa Preta, 66 y/o.</strong></p>
       </div>
-    </div>
-    <div class="card-avatar">
-      <div>
-        <img class="avatar-large" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
-      </div>
-      <div>
+      <div class="col-sm">
+        <img class="rounded-circle" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
         <h2>Carlos</h2>
         <p><strong>Faixa Preta, 66 y/o.</strong></p>
       </div>
