finished team view

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,5 +2,6 @@
   background-color: rgba(252, 252, 252, 0.4);
   border-radius: 10px;
   height: 30vw;
+  margin-top: 10px;
+  padding-top: 10px;
 }
-
