--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -4,20 +4,20 @@
     <h1>Our Professional Team</h1>
   </div>
 
-  <div class="container">
-    <div class="row align-items-center justify-content-center">
-      <div class="col-sm">
-        <img class="rounded-circle" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+  <div class="container mt-10">
+    <div class="row justify-content-between align-items-center">
+      <div class="col-4 text-center">
+        <img class="rounded-circle mt-10" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
         <h2>Carlos</h2>
         <p><strong>Faixa Preta, 66 y/o.</strong></p>
       </div>
-      <div class="col-sm">
-        <img class="rounded-circle" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+      <div class="col-4 text-center">
+        <img class="rounded-circle mt-10" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
         <h2>Carlos</h2>
         <p><strong>Faixa Preta, 66 y/o.</strong></p>
       </div>
-      <div class="col-sm">
-        <img class="rounded-circle" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
+      <div class="col-4 text-center">
+        <img class="rounded-circle mt-10" alt="avatar-large" src="https://kitt.lewagon.com/placeholder/users/arthur-littm" />
         <h2>Carlos</h2>
         <p><strong>Faixa Preta, 66 y/o.</strong></p>
       </div>
