services show skeleton

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,3 +5,11 @@
   margin-top: 10px;
   padding-top: 10px;
 }
+
+.card-service {
+  background-color: #2aa0c8;
+  border-radius: 10px;
+  width: 21vw;
+  height: 28vw;
+  margin: 35px;
+}
