--- a/app/views/pages/services.html.erb
+++ b/app/views/pages/services.html.erb
@@ -1,4 +1,15 @@
 <div class="gym-img">
   <%= render "shared/navbar" %>
-  <h1>Services</h1>
+  <div class="title-rest">
+    <h1>Our Programs</h1>
+  </div>
+
+  <div class="d-flex justify-content-between">
+    <div class="card-service">
+    </div>
+    <div class="card-service">
+    </div>
+    <div class="card-service">
+    </div>
+  </div>
 </div>
