--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,21 +9,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
           <li class="nav-item active">
-           <li>
-              <%= link_to "Team", team_path, class:"nav-link" %>
-            </li>
+              <li><%= link_to "Team", "#team-page", class:"nav-link" %></li>
           </li>
           <li class="nav-item">
-            <%= link_to "Schedule", schedule_path, class:"nav-link" %>
+            <%= link_to "Schedule", "#schedule-page", class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Services", services_path, class:"nav-link" %>
+            <%= link_to "Services", "#service-page", class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Product", product_path, class:"nav-link" %>
+            <%= link_to "Product", "#product-page", class:"nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Legacy", legacy_path, class:"nav-link" %>
+            <%= link_to "Legacy", "#legacy-page", class:"nav-link" %>
           </li>
           <li class="nav-item dropdown">
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
